<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LinearLayaout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AnadirPro"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputNombreProducto"
            android:hint="@string/NombreProLbl"
            android:paddingTop="10dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/inputCantidadProducto"
            android:hint="@string/CantProLbl"
            android:paddingTop="10dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/inputFecVenProducto"
            android:hint="@string/FecVenProLbl"
            android:paddingTop="10dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/BtnInsertar"
            android:layout_marginTop="10dp"
            android:text="@string/AnadirPro"
            android:backgroundTint="#4fb496"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>