<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrudCategoria">

    <LinearLayout
        android:id="@+id/linearLayoutEditar"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/inputNombreCategoria"
            android:hint="@string/CategoriaLbl"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/BtnVerProductos"
            android:text="@string/VerProductoLbl"
            android:backgroundTint="#4fb496"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/BtnCancelar"
            android:text="@string/CancelarLbl"
            android:textColor="@color/black"
            android:backgroundTint="#dcdcdc"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ListView
        android:id="@+id/ListViewProductos"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>